fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10,13 +10,13 @@ html {
 nav {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
-    position: fixed;
+    position: fixed; top: 0px; left: 0px;
     width: 100%;
     padding: 0.5em;
 }
 
 nav li {
-    border: solid white;
+    border: 1px solid white;
     padding: 0.5em;
     line-height: 1;
     display: inline-block;
